--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,11 +29,13 @@ a {
 /* Hide scrollbar for Chrome, Safari and Opera */
 .scrollBar::-webkit-scrollbar {
   display: none;
+  scroll-behavior: smooth
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .scrollBar {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
+  scroll-behavior: smooth
 }
 
